# es8cli

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  bitcoder.cpp  bitcoder.hpp  commandline.cpp  commandline.hpp  commands.hpp  es8data.cpp  es8data.hpp  es8parameters.cpp  es8parameters.hpp  example.sh  execute.cpp  execute.hpp  globals.cpp  globals.hpp  helpers.cpp  helpers.h  main.cpp  midi.cpp  midi.hpp  midimessages.cpp  midimessages.hpp  patch.cpp  patch.hpp  test.hpp
rtmidi-4.0.0/: .RtMidi.cpp.swp
